--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+b {
+  color: #DBB60a;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -161,6 +165,7 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 1.25rem;
+  color: #DBB60a;
 }
 
 h6, .h6 {
@@ -171,6 +176,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
   color: #F0F0F0;
+  font-size: 1.1rem;
 }
 
 
@@ -494,7 +500,7 @@ progress {
 
 .lead {
   font-size: 1.25rem;
-  font-weight: 300;
+  font-weight: 700;
 }
 
 .display-1 {
@@ -4158,8 +4164,8 @@ textarea.form-control-lg {
   --bs-card-spacer-y: 1rem;
   --bs-card-spacer-x: 1rem;
   --bs-card-title-spacer-y: 0.5rem;
-  --bs-card-border-width: 1px; /* Adjust border width as needed */
-  --bs-card-border-color: #ffc107; /* Yellow border color */
+  --bs-card-border-width: 1px;
+  --bs-card-border-color: #f0f0f0;
   --bs-card-border-radius: 0.375rem;
   --bs-card-box-shadow: ;
   --bs-card-inner-border-radius: calc(0.375rem - 1px);
@@ -4169,7 +4175,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: #3B4A54; /* Light grey background */
+  --bs-card-bg: #3B4A54;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
@@ -10869,7 +10875,7 @@ p.lead {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.5rem;
-  color: #D5D5D5;
+  color: #dbb60a;
 }
 
 #sideNav {
@@ -10958,6 +10964,19 @@ section.resume-section {
   padding-bottom: 5rem;
   max-width: 75rem;
 }
+
+section.resume-section-projects {
+  display: flex;
+  align-items: center;
+  padding-left: 3rem;
+  padding-right: 1rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  width: 100vw;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 section.resume-section .resume-section-content {
   width: 100%;
 }
