--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 219, 182, 10;
+  --bs-primary-rgb: 56, 67, 132;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -62,7 +62,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #3B4A54;
+  --bs-body-bg: #ffffff;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -73,11 +73,11 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #DBB60a;
+  --bs-link-color: #4ec3f8;
   --bs-link-hover-color: #ffff55;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
-  --bs-navbar-color: var(--bs-body-bg); /* Set to body background color or any desired color */
+  --bs-navbar-color: var(--bs-body-bg);
   --bs-navbar-hover-color: var(--bs-link-hover-color);
 }
 
@@ -85,6 +85,11 @@
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.dev-icons-text li {
+  font-size: 18px; /* Adjust this value to make the text larger or smaller */
+  margin-bottom: 1px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -107,7 +112,7 @@ body {
 }
 
 b {
-  color: #DBB60a;
+  color: #000000;
 }
 
 hr {
@@ -124,7 +129,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
-  color: #f9f9f9;
+  color: #000000;
 }
 
 h1, .h1 {
@@ -165,7 +170,7 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 1.25rem;
-  color: #DBB60a;
+  color: #4ec3f8;
 }
 
 h6, .h6 {
@@ -175,7 +180,7 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: #F0F0F0;
+  color: #050505;
   font-size: 1.1rem;
 }
 
@@ -3639,6 +3644,7 @@ textarea.form-control-lg {
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
+
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
     transition: none;
@@ -4164,7 +4170,7 @@ textarea.form-control-lg {
   --bs-card-spacer-y: 1rem;
   --bs-card-spacer-x: 1rem;
   --bs-card-title-spacer-y: 0.5rem;
-  --bs-card-border-width: 1px;
+  --bs-card-border-width: 2px;
   --bs-card-border-color: #f0f0f0;
   --bs-card-border-radius: 0.375rem;
   --bs-card-box-shadow: ;
@@ -4175,7 +4181,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: #3B4A54;
+  --bs-card-bg: #ffffff;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
@@ -7682,6 +7688,10 @@ textarea.form-control-lg {
   margin-bottom: 3rem !important;
 }
 
+.mb-6 {
+  margin-bottom: 4.5rem !important;
+}
+
 .mb-auto {
   margin-bottom: auto !important;
 }
@@ -10838,7 +10848,7 @@ textarea.form-control-lg {
 }
 body {
   padding-top: 3.375rem;
-  color: #FFFFFF;
+  color: #000000;
 }
 
 @media (min-width: 992px) {
@@ -10875,7 +10885,7 @@ p.lead {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.5rem;
-  color: #dbb60a;
+  color: #4ec3f8;
 }
 
 #sideNav {
